UNRELEASED
~~~~~~~~~~

 * The background image for upgrades is now looked for using several well-known
   (and distribution-specific) names in `${DATADIR}/gnome-software/backgrounds`,
   and the previous Fedora-specific default background image is no longer
   distributed. Distributions may need to update how they ship background
   images. See `doc/vendor-customisation.md`.

Version 42.alpha
~~~~~~~~~~~~~~~~
Released: 2022-01-07

This is the first unstable release for GNOME 42.
 * Various UI parts updated
 * Support more markup in the application description
 * Ask about package signature with PackageKit on signing issue
 * Show better System Update progress
 * Remove various cultural sensitivity badges
 * Fix a crash when processing age ratings
 * Reload application details only when not installing/removing the application
 * Do not follow symlinks when calculating disk size usage
 * Fix addons section, which could show addons for different application
 * Fix showing a ‘transaction in progress’ error when using the rpm-ostree plugin
 * Don’t recommend a reboot if firmware updates fail
 * Fix flathub repo being considered present on Fedora 35 with filtered flathub
 * Allow searching for extensions
 * Fix translation of main button on updates page
 * Fix codec installation process
 * Add new GNOME Circle apps to the featured carousel
 * Improve metadata support for snaps
 * Fix update checks being missed across suspend/hibernation
 * Ensure application lists are updated when repositories are enabled/installed or
   disabled/removed

This release also updates translations:
 * Basque
 * Belarusian
 * Bulgarian
 * Catalan
 * Chinese (China)
 * Croatian
 * Dutch
 * English (United Kingdom)
 * Friulian
 * Galician
 * German
 * Hebrew
 * Icelandic
 * Indonesian
 * Latvian
 * Lithuanian
 * Occitan (post 1500)
 * Persian
 * Portuguese
 * Portuguese (Brazil)
 * Russian
 * Serbian
 * Slovak
 * Slovenian
 * Spanish
 * Swedish
 * Turkish
 * Ukrainian
 * Vietnamese
